# kb_platform

./: .gitignore  CLAUDE.md  README.md  start-all.sh  test_deepseek.py  test_embedding_service.py  企业AI知识库平台.source.pptx  排期计划_思维导图.html  智能分片解决方案.md
.claude/: settings.json
doc/: CURRENT_SESSION.md  FEATURES.md  KNOWLEDGE_SPACE_DESIGN.md  SERVICES.md
docs/: README.md  extension-management-design.md  (+9 more)
kb-doc-processor/: CLAUDE.md  pyproject.toml
kb-doc-processor/config/: settings.yaml
kb-doc-processor/src/: app.py  config.py  embedding_client.py  kafka_consumer.py  kafka_producer.py  llm_client.py  logging_config.py  main.py  minio_client.py  pipeline.py
kb-doc-processor/src/api/: __init__.py
kb-doc-processor/src/chunker/: __init__.py  fixed_length_chunker.py  llm_chunker.py  semantic_chunker.py
kb-doc-processor/src/cleaner/: __init__.py  pii_filter.py  text_cleaner.py
kb-doc-processor/src/db/: models.py  session.py
kb-doc-processor/src/parser/: __init__.py  ocr_parser.py  tika_parser.py
kb-doc-processor/src/utils/: custom_dict.txt  metadata_extractor.py
kb-doc-processor/tests/: conftest.py  test_embedding_client.py  test_fixed_chunker.py  test_import_guard.py  test_logging_config.py  test_metadata_extractor.py  test_pipeline_failure.py  test_semantic_chunker.py  test_text_cleaner.py
rerank-service/: CLAUDE.md  pyproject.toml
rerank-service/config/: settings.yaml
rerank-service/src/: app.py  config.py  logging_config.py  main.py  reranker.py
rerank-service/src/api/: __init__.py
rerank-service/tests/: test_import_guard.py  test_rerank_trace.py
(+493 files in other folders)
