[project]
name = "kb-doc-processor"
version = "0.1.0"
description = "KB Platform 文档处理服务 — 消费 file-ingest 消息，解析/清洗/切片，发布 embed-task 消息"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "confluent-kafka>=2.5.0",
    "tika>=2.9.0",
    "minio>=7.2.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "jieba>=0.42.1",
    "python-json-logger>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
